add dtos and mapers

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,16 +1,23 @@
 spring.application.name=teamory
-server.port=8089
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/teamory
-spring.datasource.username=yassine
-spring.datasource.password=yassine12345
+server.port=8081
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+keycloak.issuer-uri=${KEYCLOAK_ISSUER_URI}
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Optional: Show SQL in logs (for debugging)
 spring.jpa.show-sql=true
 
 # Automatically create/update tables
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.type.uuid-char=true
+
 
 
 # Flyway config (Spring Boot auto-detects)
