--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -45,10 +45,10 @@
 <!--			<version>11.10.4</version>-->
 <!--		</dependency>-->
 
+
 		<dependency>
-			<groupId>jakarta.validation</groupId>
-			<artifactId>jakarta.validation-api</artifactId>
-			<version>3.1.1</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
 		<dependency>
