--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -45,6 +45,11 @@
 <!--			<version>11.10.4</version>-->
 <!--		</dependency>-->
 
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.3</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
