add activity log module with DTOs, entities, repositories, services, enums, and mappings; integrate Keycloak-based security; enhance task, comment, and other controllers with security annotations; update dependency configurations

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,6 +18,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.type.uuid-char=true
 
+# === Keycloak OIDC Settings ===
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/teamory-realm
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://keycloak:8080/realms/teamory-realm/protocol/openid-connect/certs
 
 
 # Flyway config (Spring Boot auto-detects)
