--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,7 +20,8 @@ spring.jpa.properties.hibernate.type.uuid-char=true
 
 # === Keycloak OIDC Settings ===
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/teamory-realm
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://keycloak:8080/realms/teamory-realm/protocol/openid-connect/certs
+
+logging.level.org.springframework.security=DEBUG
 
 
 # Flyway config (Spring Boot auto-detects)
