--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,6 +45,9 @@ services:
       KC_DB_URL: jdbc:postgresql://keycloak-db/keycloak
       KC_DB_USERNAME: keycloak
       KC_DB_PASSWORD: keycloak
+      KC_HOSTNAME: keycloak
+      KC_HOSTNAME_STRICT: "false"
+      KC_HOSTNAME_STRICT_BACKCHANNEL: "false"
     depends_on:
       keycloak-db:
         condition: service_healthy
